Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -321,6 +321,8 @@ Error message and password prompt
 
 <li>Farosh, the Lightning Dragon</li>
 
+<li>Frox</li>
+
 <li>Ganos Shrine</li>
 
 <li>Gemimik Shrine</li>
@@ -601,7 +603,7 @@ Error message and password prompt
 {"created":"20230525134344064","title":"$:/state/toc/TableOfContents/Database-素材--118161433","text":"close","modified":"20230526151538884"},
 {"created":"20230525134338184","title":"$:/state/toc/TableOfContents/Database-防具--118161433","text":"close","modified":"20230525134348740"},
 {"title":"$:/status/RequireReloadDueToPluginChange","text":"no"},
-{"title":"$:/StoryList","text":"","list":"Home 血月路线"},
+{"title":"$:/StoryList","created":"20230526152327186","text":"","list":"Home 生物 Frox 血月路线","modified":"20230526152329852"},
 {"created":"20230520081651938","title":"$:/tags/PageControls","list":"$:/core/ui/Buttons/home $:/core/ui/Buttons/close-all $:/core/ui/Buttons/fold-all $:/core/ui/Buttons/unfold-all $:/core/ui/Buttons/permaview $:/core/ui/Buttons/new-tiddler $:/core/ui/Buttons/new-journal $:/core/ui/Buttons/new-image $:/core/ui/Buttons/import $:/core/ui/Buttons/export-page $:/core/ui/Buttons/tag-manager $:/core/ui/Buttons/control-panel $:/core/ui/Buttons/advanced-search $:/core/ui/Buttons/manager $:/core/ui/Buttons/language $:/core/ui/Buttons/palette $:/core/ui/Buttons/theme $:/core/ui/Buttons/layout $:/core/ui/Buttons/storyview $:/core/ui/Buttons/encryption $:/core/ui/Buttons/timestamp $:/core/ui/Buttons/full-screen $:/core/ui/Buttons/print $:/core/ui/Buttons/save-wiki $:/core/ui/Buttons/refresh $:/core/ui/Buttons/more-page-actions","modified":"20230520081651938"},
 {"created":"20230525101749373","text":"","title":"$:/tags/ViewTemplateBodyFilter","list":"$:/config/ViewTemplateBodyFilters/hide-body $:/config/ViewTemplateBodyFilters/code-body $:/config/ViewTemplateBodyFilters/stylesheet $:/config/ViewTemplateBodyFilters/system $:/config/ViewTemplateBodyFilters/import $:/config/ViewTemplateBodyFilters/plugin $:/config/ViewTemplateBodyFilters/backlinks $:/config/ViewTemplateBodyFilters/default","modified":"20230525101753748"},
 {"created":"20230520071000269","text":"\u003C\u003Clist-links \"[tag{!!title}sort[title]]\">>\n\n\u003C\u003C.newButton>>","tags":"Template","title":"$:/template/Database","modified":"20230520103522228"},
@@ -630,6 +632,7 @@ Error message and password prompt
 {"created":"20230526142421909","text":"优先打爪子素材\n\n可获得素材\n\n* 岩石，属性材料。[[Light Dragon]] 的效果是[[吸血]]。\n* 角\n* 鳞\n* 爪\n\n每次刷新角，鳞，爪三选一。\n","title":"Dragon","modified":"20230526142616993"},
 {"created":"20230526081645499","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[地点]]\n\n!! POI\n\n* 去妖精泉方向开雷达找 [[大剑蘑菇]]","tags":"地点 驿站 Shrine Surface 大妖精","modified":"20230526081801190","title":"Ekochiu Shrine"},
 {"created":"20230520112110771","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[生物]]\n\n!! 出发点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"生物 Dragon","modified":"20230526142341690","title":"Farosh, the Lightning Dragon"},
+{"created":"20230526152329851","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[生物]]\n\n大蛤蟆\n\n!! 刷新点\n\n海拉鲁城堡地底左右独立空间中各一只白银，通过地表王城的护城河边上一个隐蔽的小洞下去。\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"生物","modified":"20230526152500754","title":"Frox"},
 {"created":"20230520105317130","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[地点]]\n\n\u003C\u003C.figma \"https://www.figma.com/file/wsk1tyIypyKVh1JRevscio/Zelda---Tears-of-the-Kingdom?type=design&node-id=86%3A1287&t=LuzplSZ3PNxXULtL-1\" >>\n\n!! POI\n\n# [[4风扇飞行器]]\n\n","tags":"地点 Shrine Sky","modified":"20230525151604886","title":"Ganos Shrine"},
 {"created":"20230525172627073","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[地点]]\n\n!! POI\n\n* [[蓄电池+强力风扇]]","tags":"地点 Shrine Surface","modified":"20230525172703530","title":"Gemimik Shrine"},
 {"created":"20230525171410176","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[地点]]\n\n\u003C\u003C.figma \"https://www.figma.com/file/wsk1tyIypyKVh1JRevscio/Zelda---Tears-of-the-Kingdom?type=design&node-id=126%3A674&t=Wpm6mjcU1gBRLdax-1\">>\n\n!! POI\n\n* 属性[[蜥蜴战士]] 白天火晚上冰","tags":"地点 Surface Tower","modified":"20230525171508214","title":"Gerudo Canyon Skyview Tower"},
