--- a/index.html
+++ b/index.html
@@ -425,6 +425,8 @@ Error message and password prompt
 
 <li>卡卡利科村</li>
 
+<li>卢比</li>
+
 <li>地底武器刷新</li>
 
 <li>地点</li>
@@ -590,8 +592,8 @@ Error message and password prompt
 {"created":"20230520054538351","title":"$:/state/tab-2065006209","text":"$:/core/ui/ControlPanel/Saving/GitHub","modified":"20230522113956513"},
 {"created":"20230522233357380","title":"$:/state/tab-267361470","text":"$:/core/ui/TiddlerInfo/References","modified":"20230522234236610"},
 {"created":"20230521034021098","title":"$:/state/tab-99014043","text":"$:/core/ui/ControlPanel/ViewTemplateBody","modified":"20230525101506932"},
-{"created":"20230520062749396","title":"$:/state/tab/moresidebar-1850697562","text":"$:/core/ui/MoreSideBar/System","modified":"20230526155144765"},
-{"created":"20230520054626033","title":"$:/state/tab/sidebar--595412856","text":"$:/core/ui/SideBar/More","modified":"20230526155143048"},
+{"created":"20230520062749396","title":"$:/state/tab/moresidebar-1850697562","text":"$:/core/ui/MoreSideBar/All","modified":"20230527013422655"},
+{"created":"20230520054626033","title":"$:/state/tab/sidebar--595412856","text":"$:/core/ui/SideBar/Open","modified":"20230527013423277"},
 {"created":"20230520081558315","title":"$:/state/tabs/controlpanel/toolbars-1345989671","text":"$:/core/ui/ControlPanel/Toolbars/EditToolbar","modified":"20230522234039916"},
 {"created":"20230525134302402","title":"$:/state/toc/TableOfContents-Database--118161433","text":"open","modified":"20230526150537566"},
 {"created":"20230525134337246","title":"$:/state/toc/TableOfContents-Resource--118161433","text":"close","modified":"20230526075924285"},
@@ -603,7 +605,7 @@ Error message and password prompt
 {"created":"20230525134344064","title":"$:/state/toc/TableOfContents/Database-素材--118161433","text":"close","modified":"20230526151538884"},
 {"created":"20230525134338184","title":"$:/state/toc/TableOfContents/Database-防具--118161433","text":"close","modified":"20230525134348740"},
 {"title":"$:/status/RequireReloadDueToPluginChange","text":"no"},
-{"title":"$:/StoryList","created":"20230526155112127","text":"","list":"队长魔像的角 $:/site/macros 防具 依盖队套装 左纳乌套装 Home 血月路线","modified":"20230526155549343"},
+{"title":"$:/StoryList","created":"20230527013444384","text":"","list":"Home 素材 卢比 卓拉领地 利特村 血月路线","modified":"20230527013535038"},
 {"created":"20230520081651938","title":"$:/tags/PageControls","list":"$:/core/ui/Buttons/home $:/core/ui/Buttons/close-all $:/core/ui/Buttons/fold-all $:/core/ui/Buttons/unfold-all $:/core/ui/Buttons/permaview $:/core/ui/Buttons/new-tiddler $:/core/ui/Buttons/new-journal $:/core/ui/Buttons/new-image $:/core/ui/Buttons/import $:/core/ui/Buttons/export-page $:/core/ui/Buttons/tag-manager $:/core/ui/Buttons/control-panel $:/core/ui/Buttons/advanced-search $:/core/ui/Buttons/manager $:/core/ui/Buttons/language $:/core/ui/Buttons/palette $:/core/ui/Buttons/theme $:/core/ui/Buttons/layout $:/core/ui/Buttons/storyview $:/core/ui/Buttons/encryption $:/core/ui/Buttons/timestamp $:/core/ui/Buttons/full-screen $:/core/ui/Buttons/print $:/core/ui/Buttons/save-wiki $:/core/ui/Buttons/refresh $:/core/ui/Buttons/more-page-actions","modified":"20230520081651938"},
 {"created":"20230525101749373","text":"","title":"$:/tags/ViewTemplateBodyFilter","list":"$:/config/ViewTemplateBodyFilters/hide-body $:/config/ViewTemplateBodyFilters/code-body $:/config/ViewTemplateBodyFilters/stylesheet $:/config/ViewTemplateBodyFilters/system $:/config/ViewTemplateBodyFilters/import $:/config/ViewTemplateBodyFilters/plugin $:/config/ViewTemplateBodyFilters/backlinks $:/config/ViewTemplateBodyFilters/default","modified":"20230525101753748"},
 {"created":"20230520071000269","text":"\u003C\u003Clist-links \"[tag{!!title}sort[title]]\">>\n\n\u003C\u003C.newButton>>","tags":"Template","title":"$:/template/Database","modified":"20230520103522228"},
@@ -682,8 +684,9 @@ Error message and password prompt
 {"created":"20230526151031006","text":"从雪山神庙往方块巨人方向有一个特级队长，方块巨人下面还有一个特级队长。队长固定掉落35攻的素材+一把到手刚剑，合一起就是55攻单手剑，还掉大能量核心。\n\n[img[https://blog.iany.me/uploads/202305/vZyaTt/gttLGJ.jpg]]","tags":"血月路线 Active","title":"初始空岛魔像武器","modified":"20230526151818669"},
 {"created":"20230526092417264","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[地点]]\n\n!! POI\n\n* 3條[[光亮霍拉魚]]，或是3個[[光亮蘑菇]]，或3條[[冰冷鱒魚]]跟他兌換10隻[[木箭]]","tags":"地点 Tip","modified":"20230526141950172","title":"利特村"},
 {"created":"20230525164716484","text":"湿身威力增加","tags":"","title":"卓拉武器","modified":"20230525165654013"},
-{"created":"20230526092557979","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[地点]]\n\n!! POI\n\n* 下雨天附近很多[[精力螃蟹]]，可以跟商店老闆換寶石。","tags":"地点 卢比 Tip","modified":"20230526141959145","title":"卓拉领地"},
+{"created":"20230526092557979","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[地点]]\n\n!! POI\n\n* 下雨天附近很多[[精力螃蟹]]，可以跟商店老板换宝石卖[[卢比]]","tags":"地点 卢比 Tip","modified":"20230527013556685","title":"卓拉领地"},
 {"created":"20230525170338081","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[地点]]\n\n\u003C\u003C.figma \"https://www.figma.com/file/wsk1tyIypyKVh1JRevscio/Zelda---Tears-of-the-Kingdom?type=design&node-id=126%3A523&t=Wpm6mjcU1gBRLdax-1\">>\n\n!! POI\n\n* 西北方向 无属性[[蜥蜴战士]]巢穴\n","tags":"地点","modified":"20230525170457292","title":"卡卡利科村"},
+{"created":"20230527013535037","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[素材]]\n\n!! 进货点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"素材","modified":"20230527013538596","title":"卢比"},
 {"created":"20230526144433268","text":"* 武器双手、单手、枪的类型固定，品牌随机\n* 血月刷新，人在地底时一定不会触发血月","tags":"Tip Depths","title":"地底武器刷新","modified":"20230526144745530"},
 {"created":"20230520064224697","text":"\u003C\u003C.children>>\n\n\u003C\u003C.newButton>>","tags":"Database","title":"地点","modified":"20230520104729787"},
 {"created":"20230525161728444","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[余料]]\n\n!! 进货点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"余料","modified":"20230525161823382","title":"大刺球"},
