Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -367,6 +367,8 @@ Error message and password prompt
 
 <li>Resource</li>
 
+<li>Sahasra Slope Skyview Tower</li>
+
 <li>Sifumim Shrine</li>
 
 <li>Sitsum Shrine</li>
@@ -517,6 +519,8 @@ Error message and password prompt
 
 <li>蜥蜴战士</li>
 
+<li>蝙蝠眼球</li>
+
 <li>血月路线</li>
 
 <li>装备维修</li>
@@ -601,7 +605,7 @@ Error message and password prompt
 {"created":"20230522233357380","title":"$:/state/tab-267361470","text":"$:/core/ui/TiddlerInfo/References","modified":"20230522234236610"},
 {"created":"20230521034021098","title":"$:/state/tab-99014043","text":"$:/core/ui/ControlPanel/ViewTemplateBody","modified":"20230525101506932"},
 {"created":"20230520062749396","title":"$:/state/tab/moresidebar-1850697562","text":"$:/core/ui/MoreSideBar/All","modified":"20230527013422655"},
-{"created":"20230520054626033","title":"$:/state/tab/sidebar--595412856","text":"$:/core/ui/SideBar/Open","modified":"20230527013423277"},
+{"created":"20230520054626033","title":"$:/state/tab/sidebar--595412856","text":"TableOfContents","modified":"20230530095604575"},
 {"created":"20230520081558315","title":"$:/state/tabs/controlpanel/toolbars-1345989671","text":"$:/core/ui/ControlPanel/Toolbars/EditToolbar","modified":"20230522234039916"},
 {"created":"20230525134302402","title":"$:/state/toc/TableOfContents-Database--118161433","text":"open","modified":"20230526150537566"},
 {"created":"20230525134337246","title":"$:/state/toc/TableOfContents-Resource--118161433","text":"close","modified":"20230526075924285"},
@@ -613,7 +617,7 @@ Error message and password prompt
 {"created":"20230525134344064","title":"$:/state/toc/TableOfContents/Database-素材--118161433","text":"close","modified":"20230526151538884"},
 {"created":"20230525134338184","title":"$:/state/toc/TableOfContents/Database-防具--118161433","text":"close","modified":"20230525134348740"},
 {"title":"$:/status/RequireReloadDueToPluginChange","text":"no"},
-{"title":"$:/StoryList","created":"20230529031314644","text":"","list":"Home 料理 血月路线","modified":"20230529031314644"},
+{"title":"$:/StoryList","created":"20230530095117993","text":"","list":"地点 [[Sahasra Slope Skyview Tower]] Home 素材 蝙蝠眼球 血月路线","modified":"20230530095607306"},
 {"created":"20230520081651938","title":"$:/tags/PageControls","list":"$:/core/ui/Buttons/home $:/core/ui/Buttons/close-all $:/core/ui/Buttons/fold-all $:/core/ui/Buttons/unfold-all $:/core/ui/Buttons/permaview $:/core/ui/Buttons/new-tiddler $:/core/ui/Buttons/new-journal $:/core/ui/Buttons/new-image $:/core/ui/Buttons/import $:/core/ui/Buttons/export-page $:/core/ui/Buttons/tag-manager $:/core/ui/Buttons/control-panel $:/core/ui/Buttons/advanced-search $:/core/ui/Buttons/manager $:/core/ui/Buttons/language $:/core/ui/Buttons/palette $:/core/ui/Buttons/theme $:/core/ui/Buttons/layout $:/core/ui/Buttons/storyview $:/core/ui/Buttons/encryption $:/core/ui/Buttons/timestamp $:/core/ui/Buttons/full-screen $:/core/ui/Buttons/print $:/core/ui/Buttons/save-wiki $:/core/ui/Buttons/refresh $:/core/ui/Buttons/more-page-actions","modified":"20230520081651938"},
 {"created":"20230525101749373","text":"","title":"$:/tags/ViewTemplateBodyFilter","list":"$:/config/ViewTemplateBodyFilters/hide-body $:/config/ViewTemplateBodyFilters/code-body $:/config/ViewTemplateBodyFilters/stylesheet $:/config/ViewTemplateBodyFilters/system $:/config/ViewTemplateBodyFilters/import $:/config/ViewTemplateBodyFilters/plugin $:/config/ViewTemplateBodyFilters/backlinks $:/config/ViewTemplateBodyFilters/default","modified":"20230525101753748"},
 {"created":"20230520071000269","text":"\u003C\u003Clist-links \"[tag{!!title}sort[title]]\">>\n\n\u003C\u003C.newButton>>","tags":"Template","title":"$:/template/Database","modified":"20230520103522228"},
@@ -665,6 +669,7 @@ Error message and password prompt
 {"created":"20230521033858671","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[地点]]\n\n\u003C\u003C.featured>>\n\n!! POI\n\n# 神庙内\n#* [[火箭]] 无限刷新 (见[[常去的进货地点 (NGA)]])","tags":"地点","modified":"20230522063059040","title":"Oromuwak Shrine"},
 {"created":"20230520112542050","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[地点]]\n\n!! 登龙\n\n* [[Farosh, the Lightning Dragon]]","tags":"地点 Tower Surface","modified":"20230521024056707","title":"Popla Foothills Skyview Tower"},
 {"created":"20230520105920555","text":"\u003C\u003C.children>>\n\n\u003C\u003C.newButton>>","title":"Resource","modified":"20230525134335400","tags":"TableOfContents","caption":"资源"},
+{"created":"20230530095607306","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[地点]]\n\n!! POI\n\n# [[蝙蝠眼球]]\n\n[img[https://blog.iany.me/uploads/202305/MCqxyF/IS8XrM.png]]","tags":"地点 Tower Surface todo","modified":"20230530095727021","title":"Sahasra Slope Skyview Tower"},
 {"created":"20230522061914014","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[地点]]\n\n!! POI\n\n* [[沃托里村]]及其东南 [[大剑香蕉]]","tags":"地点 Surface Shrine","modified":"20230522062459743","title":"Sifumim Shrine"},
 {"created":"20230520111332422","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[地点]]\n\n!! 登龙\n\n* [[Light Dragon]] 拔出大师剑之后","tags":"地点","modified":"20230521024123200","title":"Sitsum Shrine"},
 {"created":"20230520081723373","title":"Sky","color":"#51a6f5","modified":"20230520081725919"},
@@ -740,6 +745,7 @@ Error message and password prompt
 {"created":"20230525093112075","text":"* 蛮族套装：蛮族头盔、蛮族服、蛮族短裤\n* 防具属性：攻击提升 {{攻击||$:/core/ui/TagTemplate}}\n* 套装奖励：蓄力攻击精力持久 {{蓄力||$:/core/ui/TagTemplate}}\n\n!! 升级材料\n\n* 防 御 力：3（初始）→5（一星）→ 8（二星）→12（三星）→ 20（四星）\n* 一星：[[大剑草]]×3\n* 二星：[[莱尼尔|Lynel]]的刃角×2、[[莱尼尔|Lynel]]的碎角×2、[[大剑蘑菇]]x5\n* 三星：蓝鬃莱尼尔的刃角×3、蓝鬃莱尼尔的碎角×3、[[大剑螃蟹]]x3\n* 四星：白鬃莱尼尔的刃角×3、白鬃莱尼尔的碎角×3、大剑独角仙x3","tags":"防具 攻击 蓄力 todo","modified":"20230526080251308","title":"蛮族套装"},
 {"created":"20230524161043613","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[素材]]\n\n初始台地 [img[https://blog.iany.me/uploads/202305/uv6O8Y/kADpwx.png]]\n\n库坦池塘附近\n\n!! 进货点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"素材","modified":"20230526091143676","title":"蜂蜜"},
 {"created":"20230525163821378","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[生物]]\n\n!! 刷新点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"生物 属性材料","modified":"20230525172328000","title":"蜥蜴战士"},
+{"created":"20230530095131863","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[素材]]\n\n弓自动跟踪\n\n!! 进货点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"素材","modified":"20230530095200768","title":"蝙蝠眼球"},
 {"created":"20230526143104852","text":"!! 当前使用路线\n\n\u003C\u003Clist-links \"[tag[血月路线]] +[tag[Active]] +[sort[]]\">>\n\n---\n\n* 全部路线查看 {{血月路线||$:/core/ui/TagTemplate}}\n* [[常去的进货地点 (NGA)]]","tags":"","title":"血月路线","modified":"20230526152556396"},
 {"created":"20230526150322948","text":"让 [[Death Mountain]] 的 [[章鱼哥]] 吞下武器和盾牌会维护成全新的。\n\n章鱼哥不吞[[英杰武器]]，但是可以把 [[英杰武器]] 通过余料建造附在其它武器上。","title":"装备维修","modified":"20230526150525567","tags":"Tip 血月路线 Active"},
 {"created":"20230526150207035","text":"让 [[Death Mountain]] 的 [[章鱼哥]] 吞下武器可以刷新附魔词条。\n\n* 攻击最高 +10","title":"装备附魔","modified":"20230526150320221","tags":"Tip"},
