Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -389,6 +389,8 @@ Error message and password prompt
 
 <li>Top 10 盾牌</li>
 
+<li>U 型铁逃课</li>
+
 <li>Untitled</li>
 
 <li>Usazum Shrine</li>
@@ -617,7 +619,7 @@ Error message and password prompt
 {"created":"20230525134344064","title":"$:/state/toc/TableOfContents/Database-素材--118161433","text":"close","modified":"20230526151538884"},
 {"created":"20230525134338184","title":"$:/state/toc/TableOfContents/Database-防具--118161433","text":"close","modified":"20230525134348740"},
 {"title":"$:/status/RequireReloadDueToPluginChange","text":"no"},
-{"title":"$:/StoryList","created":"20230530095117993","text":"","list":"地点 [[Sahasra Slope Skyview Tower]] Home 素材 蝙蝠眼球 血月路线","modified":"20230530095607306"},
+{"title":"$:/StoryList","text":"","list":"[[U 型铁逃课]] Home 血月路线"},
 {"created":"20230520081651938","title":"$:/tags/PageControls","list":"$:/core/ui/Buttons/home $:/core/ui/Buttons/close-all $:/core/ui/Buttons/fold-all $:/core/ui/Buttons/unfold-all $:/core/ui/Buttons/permaview $:/core/ui/Buttons/new-tiddler $:/core/ui/Buttons/new-journal $:/core/ui/Buttons/new-image $:/core/ui/Buttons/import $:/core/ui/Buttons/export-page $:/core/ui/Buttons/tag-manager $:/core/ui/Buttons/control-panel $:/core/ui/Buttons/advanced-search $:/core/ui/Buttons/manager $:/core/ui/Buttons/language $:/core/ui/Buttons/palette $:/core/ui/Buttons/theme $:/core/ui/Buttons/layout $:/core/ui/Buttons/storyview $:/core/ui/Buttons/encryption $:/core/ui/Buttons/timestamp $:/core/ui/Buttons/full-screen $:/core/ui/Buttons/print $:/core/ui/Buttons/save-wiki $:/core/ui/Buttons/refresh $:/core/ui/Buttons/more-page-actions","modified":"20230520081651938"},
 {"created":"20230525101749373","text":"","title":"$:/tags/ViewTemplateBodyFilter","list":"$:/config/ViewTemplateBodyFilters/hide-body $:/config/ViewTemplateBodyFilters/code-body $:/config/ViewTemplateBodyFilters/stylesheet $:/config/ViewTemplateBodyFilters/system $:/config/ViewTemplateBodyFilters/import $:/config/ViewTemplateBodyFilters/plugin $:/config/ViewTemplateBodyFilters/backlinks $:/config/ViewTemplateBodyFilters/default","modified":"20230525101753748"},
 {"created":"20230520071000269","text":"\u003C\u003Clist-links \"[tag{!!title}sort[title]]\">>\n\n\u003C\u003C.newButton>>","tags":"Template","title":"$:/template/Database","modified":"20230520103522228"},
@@ -680,6 +682,7 @@ Error message and password prompt
 {"created":"20230525071007577","text":"\u003C\u003C.children>>\n\n\n","tags":"","title":"Tip","modified":"20230526142315928"},
 {"created":"20230525160127116","text":"\u003C\u003C.children>>","title":"todo","modified":"20230525160135714"},
 {"created":"20230524155715154","text":"https://youtu.be/aXMFXs86oB8\n\n* 升高系列：[[炸弹花]] [[弹簧]] [[火箭]] [[飞行翼]] 商店卖的[[飞行伞]]\n* 战斗辅助：[[镜子]]\n* 属性：蝙蝠翅膀 龙岩石 古栗欧克角","tags":"Resource","title":"Top 10 盾牌","modified":"20230525172201930"},
+{"created":"20230530095749565","text":"魂之贤者右脚工厂 U 型铁可以用 6 个围成一圈","tags":"Tip","title":"U 型铁逃课","modified":"20230530095923309"},
 {"title":"Untitled","text":"蛮族套装升级材料"},
 {"created":"20230526080734747","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[地点]]\n\n\u003C\u003C.figma \"https://www.figma.com/file/wsk1tyIypyKVh1JRevscio/Zelda---Tears-of-the-Kingdom?type=design&node-id=150%3A500&t=pZEAVpr6lI3O8rqX-1\">>\n\n!! POI\n\n* 洞口通天术上去各种蘑菇 [[大剑蘑菇]]\n* 潜行素材 [[潜行草]] [[宁静公主]]\n* [[蜂蜜]]","tags":"地点 Shrine Surface","modified":"20230526093322423","title":"Usazum Shrine"},
 {"created":"20230525172729157","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[地点]]\n\n!! POI\n\n* 购买[[海利亚盾]]\n* 购买[[怪物精华]]","tags":"地点 Village Surface","modified":"20230526082022041","title":"一始村"},
