Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -357,8 +357,6 @@ Error message and password prompt
 
 <li>Naydra, the Frost Dragon</li>
 
-<li>New 建筑材料</li>
-
 <li>Orochium Shrine</li>
 
 <li>Oromuwak Shrine</li>
@@ -609,7 +607,7 @@ Error message and password prompt
 {"created":"20230520062749396","title":"$:/state/tab/moresidebar-1850697562","text":"$:/core/ui/MoreSideBar/All","modified":"20230527013422655"},
 {"created":"20230520054626033","title":"$:/state/tab/sidebar--595412856","text":"TableOfContents","modified":"20230530095604575"},
 {"created":"20230520081558315","title":"$:/state/tabs/controlpanel/toolbars-1345989671","text":"$:/core/ui/ControlPanel/Toolbars/EditToolbar","modified":"20230522234039916"},
-{"created":"20230525134302402","title":"$:/state/toc/TableOfContents-Database--118161433","text":"open","modified":"20230526150537566"},
+{"created":"20230525134302402","title":"$:/state/toc/TableOfContents-Database--118161433","text":"close","modified":"20230530143823322"},
 {"created":"20230525134337246","title":"$:/state/toc/TableOfContents-Resource--118161433","text":"close","modified":"20230526075924285"},
 {"created":"20230525134352827","title":"$:/state/toc/TableOfContents/Database-地点--118161433","text":"open","modified":"20230530100125973"},
 {"created":"20230525134349626","title":"$:/state/toc/TableOfContents/Database-建筑材料--118161433","text":"close","modified":"20230525134352244"},
@@ -619,7 +617,7 @@ Error message and password prompt
 {"created":"20230525134344064","title":"$:/state/toc/TableOfContents/Database-素材--118161433","text":"close","modified":"20230526151538884"},
 {"created":"20230525134338184","title":"$:/state/toc/TableOfContents/Database-防具--118161433","text":"close","modified":"20230525134348740"},
 {"title":"$:/status/RequireReloadDueToPluginChange","text":"no"},
-{"title":"$:/StoryList","created":"20230530100029565","text":"","list":"[[Sahasra Slope Skyview Tower]] [[Popla Foothills Skyview Tower]] 地点 [[U 型铁逃课]] Home 血月路线","modified":"20230530100154664"},
+{"title":"$:/StoryList","created":"20230530143831333","text":"","list":"Home 建筑材料 火箭 血月路线","modified":"20230530143844351"},
 {"created":"20230520081651938","title":"$:/tags/PageControls","list":"$:/core/ui/Buttons/home $:/core/ui/Buttons/close-all $:/core/ui/Buttons/fold-all $:/core/ui/Buttons/unfold-all $:/core/ui/Buttons/permaview $:/core/ui/Buttons/new-tiddler $:/core/ui/Buttons/new-journal $:/core/ui/Buttons/new-image $:/core/ui/Buttons/import $:/core/ui/Buttons/export-page $:/core/ui/Buttons/tag-manager $:/core/ui/Buttons/control-panel $:/core/ui/Buttons/advanced-search $:/core/ui/Buttons/manager $:/core/ui/Buttons/language $:/core/ui/Buttons/palette $:/core/ui/Buttons/theme $:/core/ui/Buttons/layout $:/core/ui/Buttons/storyview $:/core/ui/Buttons/encryption $:/core/ui/Buttons/timestamp $:/core/ui/Buttons/full-screen $:/core/ui/Buttons/print $:/core/ui/Buttons/save-wiki $:/core/ui/Buttons/refresh $:/core/ui/Buttons/more-page-actions","modified":"20230520081651938"},
 {"created":"20230525101749373","text":"","title":"$:/tags/ViewTemplateBodyFilter","list":"$:/config/ViewTemplateBodyFilters/hide-body $:/config/ViewTemplateBodyFilters/code-body $:/config/ViewTemplateBodyFilters/stylesheet $:/config/ViewTemplateBodyFilters/system $:/config/ViewTemplateBodyFilters/import $:/config/ViewTemplateBodyFilters/plugin $:/config/ViewTemplateBodyFilters/backlinks $:/config/ViewTemplateBodyFilters/default","modified":"20230525101753748"},
 {"created":"20230520071000269","text":"\u003C\u003Clist-links \"[tag{!!title}sort[title]]\">>\n\n\u003C\u003C.newButton>>","tags":"Template","title":"$:/template/Database","modified":"20230520103522228"},
@@ -666,7 +664,6 @@ Error message and password prompt
 {"created":"20230525155712195","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[地点]]\n\n!! POI\n\n* [[Lynel]] x6: Lynel x2, Blue-Maned x1, White-Maned x1, Silver x2","tags":"地点 Lightroot Depths","modified":"20230526141810074","title":"Mu-ustust Lightroot"},
 {"created":"20230520111823260","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[地点]]\n\n!! 登龙\n\n* [[Light Dragon]] 拔出大师剑之前","tags":"地点 Sky Shrine","modified":"20230521024143997","title":"Nachoyah Shrine"},
 {"created":"20230520113326620","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[生物]]\n\n!! 出发点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"生物 Dragon","modified":"20230526142354217","title":"Naydra, the Frost Dragon"},
-{"created":"20230525161647630","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[建筑材料]]\n\n!! 进货点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"建筑材料","modified":"20230525161647630","title":"New 建筑材料"},
 {"created":"20230525162154750","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[地点]]\n\n\u003C\u003C.figma \"https://www.figma.com/file/wsk1tyIypyKVh1JRevscio/Zelda---Tears-of-the-Kingdom?type=design&node-id=120%3A481&t=Wpm6mjcU1gBRLdax-1\">>\n\n!! POI\n\n* [[大刺球]]","tags":"地点 Shrine Surface","modified":"20230525162224499","title":"Orochium Shrine"},
 {"created":"20230521033858671","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[地点]]\n\n\u003C\u003C.featured>>\n\n!! POI\n\n# 神庙内\n#* [[火箭]] 无限刷新 (见[[常去的进货地点 (NGA)]])","tags":"地点","modified":"20230522063059040","title":"Oromuwak Shrine"},
 {"created":"20230520112542050","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[地点]]\n\n!! 登龙\n\n* [[Farosh, the Lightning Dragon]]\n* [[蝙蝠眼球]]\n\n[img[https://blog.iany.me/uploads/202305/1ZOjiD/LRUyOB.png]]","tags":"地点 Tower Surface","modified":"20230530100143869","title":"Popla Foothills Skyview Tower"},
@@ -733,7 +730,7 @@ Error message and password prompt
 {"created":"20230525160635718","text":"\u003C\u003Clist-links \"[tag{!!title}sort[title]]\">>\n\n\u003C\u003C.newButton>>","tags":"Database","title":"武器","modified":"20230526141920060"},
 {"created":"20230525160233560","text":"\u003C\u003Clist-links \"[tag{!!title}sort[title]]\">>\n\n\u003C\u003C.newButton>>","tags":"Database","title":"武器余料建造","modified":"20230525160257892"},
 {"created":"20230522062237825","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[地点]]\n\n传送点 [[Sifumim Shrine]]\n\n免费住宿、料理和宝箱\n\n!! POI","tags":"地点 Village Surface","modified":"20230522062454698","title":"沃托里村"},
-{"created":"20230521033934870","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[建筑材料]]\n\n!! 进货点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"建筑材料","modified":"20230521033940257","title":"火箭"},
+{"created":"20230521033934870","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[建筑材料]]\n\n利特村神庙\n\n\n!! 进货点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"建筑材料 todo","modified":"20230530143919704","title":"火箭"},
 {"created":"20230526141637543","text":"开载具的时候要把火贤者关掉，不然会把载具压歪","tags":"Tip","title":"火贤者和载具","modified":"20230526141651155"},
 {"created":"20230525164702196","text":"回避威力增加","title":"王族武器","modified":"20230525164713349"},
 {"created":"20230525164630006","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[武器余料建造]]\n\n[[王族武器]] + [[Lynel]] 刃角","tags":"武器余料建造","modified":"20230525164656740","title":"王族武器+人马刃角"},
