Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -411,6 +411,8 @@ Error message and password prompt
 
 <li>光鳞之枪+冰属性素材</li>
 
+<li>全新武器获取方法</li>
+
 <li>冰龙头</li>
 
 <li>冷冻果</li>
@@ -617,7 +619,7 @@ Error message and password prompt
 {"created":"20230525134344064","title":"$:/state/toc/TableOfContents/Database-素材--118161433","text":"close","modified":"20230526151538884"},
 {"created":"20230525134338184","title":"$:/state/toc/TableOfContents/Database-防具--118161433","text":"close","modified":"20230525134348740"},
 {"title":"$:/status/RequireReloadDueToPluginChange","text":"no"},
-{"title":"$:/StoryList","created":"20230531140029326","text":"","list":"防具升级 Home 防具 血月路线","modified":"20230531140050981"},
+{"title":"$:/StoryList","created":"20230621012244361","text":"","list":"Home 武器 全新武器获取方法 血月路线","modified":"20230621012304968"},
 {"created":"20230520081651938","title":"$:/tags/PageControls","list":"$:/core/ui/Buttons/home $:/core/ui/Buttons/close-all $:/core/ui/Buttons/fold-all $:/core/ui/Buttons/unfold-all $:/core/ui/Buttons/permaview $:/core/ui/Buttons/new-tiddler $:/core/ui/Buttons/new-journal $:/core/ui/Buttons/new-image $:/core/ui/Buttons/import $:/core/ui/Buttons/export-page $:/core/ui/Buttons/tag-manager $:/core/ui/Buttons/control-panel $:/core/ui/Buttons/advanced-search $:/core/ui/Buttons/manager $:/core/ui/Buttons/language $:/core/ui/Buttons/palette $:/core/ui/Buttons/theme $:/core/ui/Buttons/layout $:/core/ui/Buttons/storyview $:/core/ui/Buttons/encryption $:/core/ui/Buttons/timestamp $:/core/ui/Buttons/full-screen $:/core/ui/Buttons/print $:/core/ui/Buttons/save-wiki $:/core/ui/Buttons/refresh $:/core/ui/Buttons/more-page-actions","modified":"20230520081651938"},
 {"created":"20230525101749373","text":"","title":"$:/tags/ViewTemplateBodyFilter","list":"$:/config/ViewTemplateBodyFilters/hide-body $:/config/ViewTemplateBodyFilters/code-body $:/config/ViewTemplateBodyFilters/stylesheet $:/config/ViewTemplateBodyFilters/system $:/config/ViewTemplateBodyFilters/import $:/config/ViewTemplateBodyFilters/plugin $:/config/ViewTemplateBodyFilters/backlinks $:/config/ViewTemplateBodyFilters/default","modified":"20230525101753748"},
 {"created":"20230520071000269","text":"\u003C\u003Clist-links \"[tag{!!title}sort[title]]\">>\n\n\u003C\u003C.newButton>>","tags":"Template","title":"$:/template/Database","modified":"20230520103522228"},
@@ -691,6 +693,7 @@ Error message and password prompt
 {"created":"20230520063912950","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[建筑材料]]\n\n!! 进货点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"建筑材料","title":"光线头","modified":"20230520110156247"},
 {"created":"20230525165631228","text":"","title":"光鳞之枪","modified":"20230525165643926","tags":"英杰武器 卓拉武器"},
 {"created":"20230525165329259","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[武器余料建造]]\n\n[[光鳞之枪]] + 冰属性素材比如 [[蜥蜴战士]]","tags":"武器余料建造","modified":"20230525165427492","title":"光鳞之枪+冰属性素材"},
+{"created":"20230621012314442","text":"https://www.youtube.com/watch?v=XJvgfWUVkII&feature=youtu.be","title":"全新武器获取方法","modified":"20230621012321732","tags":"Tip todo"},
 {"created":"20230520063601215","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[建筑材料]]\n\n!! 进货点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"建筑材料","title":"冰龙头","modified":"20230520110307600"},
 {"created":"20230520064818433","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[素材]]\n\n!! 进货点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>","tags":"素材","title":"冷冻果","modified":"20230520110405869"},
 {"created":"20230525172454860","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[武器余料建造]]\n\n[[左纳乌武器]]\n","tags":"武器余料建造","modified":"20230526142258511","title":"刚剑柄+上级魔像3钻头"},
@@ -727,7 +730,7 @@ Error message and password prompt
 {"created":"20230525164850919","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[武器余料建造]]\n\n[[斩铁大剑]] + 高攻素材\n\n钝器伤害","tags":"武器余料建造","modified":"20230525165228990","title":"斩铁大剑+高攻素材"},
 {"created":"20230526092333222","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[素材]]\n\n!! 进货点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"素材","modified":"20230526092337592","title":"木箭"},
 {"created":"20230525165551136","text":"材料攻击 x2","title":"格鲁德武器","modified":"20230525165558529"},
-{"created":"20230525160635718","text":"\u003C\u003Clist-links \"[tag{!!title}sort[title]]\">>\n\n\u003C\u003C.newButton>>","tags":"Database","title":"武器","modified":"20230526141920060"},
+{"created":"20230525160635718","text":"\u003C\u003Clist-links \"[tag{!!title}sort[title]]\">>\n\n\u003C\u003C.newButton>>\n\n[[全新武器获取方法]]","tags":"Database","title":"武器","modified":"20230621012302465"},
 {"created":"20230525160233560","text":"\u003C\u003Clist-links \"[tag{!!title}sort[title]]\">>\n\n\u003C\u003C.newButton>>","tags":"Database","title":"武器余料建造","modified":"20230525160257892"},
 {"created":"20230522062237825","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[地点]]\n\n传送点 [[Sifumim Shrine]]\n\n免费住宿、料理和宝箱\n\n!! POI","tags":"地点 Village Surface","modified":"20230522062454698","title":"沃托里村"},
 {"created":"20230521033934870","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[建筑材料]]\n\n利特村神庙\n\n\n!! 进货点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"建筑材料 todo","modified":"20230530143919704","title":"火箭"},
